<resources>
    <string name="app_name">Proyecto_Aeropuerto</string>
    <string name="txtTitAero">Aerpuerto Internacional\nLa Paz - Bolivia</string>
    <string name="txtDescIvAvionMain">Imagen logo del main</string>
    <string name="txtTituloSignIn">Inicio de sesión</string>
    <string name="txtIniSesion">Iniciar Sesión</string>
    <string name="txtCod">Código</string>
    <string name="txtClave">Contraseña</string>
    <string name="txtAddAdmin">Añadir Administrador</string>
    <string name="txtAddVuelo">Añadir Vuelo</string>
    <string name="txtTitMenuAdmin">Menú Administrador</string>
    <string name="txtTitAddAdmin">Añadir Administrador</string>
    <string name="txtTitCheckIn">Check In</string>
    <string name="txtAdd">Añadir</string>
    <string name="txtCI">Carnet de identidad (C.I)</string>
    <string name="txtNombres">Nombres</string>
    <string name="txtApPat">Apellido Paterno</string>
    <string name="txtApMat">Apellido Materno</string>
    <string name="txtAps">Apellidos</string>
    <string name="txtCodRes">Código de reserva</string>
    <string name="txtIden">Identificar</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtConfirmPassword">Confirmar Contraseña</string>
    <string name="txtBienvenida">Bienvenid@ a\nAeropuerto El Alto</string>
    <string name="txtPetCheck">Registra a tu mascota</string>
    <string name="txtRegsMascota">Registar Mascota</string>
    <string name="txtVacunado">¿La mascota está vacunada?</string>
    <string name="txtPesoKg">Peso (Kg)</string>
    <string name="txtVueSalida">Vuelos de salida</string>
    <string name="txtVueLlegada">Vuelos de llegada</string>
    <string name="txtElijaAero">Elija su aerolínea de preferencia</string>
    <string name="txtCerrarSesionAdmin">Cerrar Sesión</string>
    <string name="txtTitEquipaje">Equipaje</string>
    <string name="txtResEquipaje">Registrar Equipaje</string>

    <!--Reserva-->
    <string name="txtTitReserva">Reserva tu vuelo\ningresando tus datos</string>
    <string name="txtReservar">Reservar Vuelo</string>
    <string name="txtNumDoc">Número de documento</string>
    <string name="txtFechaNac">Fecha de nacimiento</string>

    <!--Vuelos-->
    <string name="txtTitVuelo">Vuelos</string>
    <string name="txtVuelo">Vuelo:</string>
    <string name="txtVuelosDisp">Vuelos disponibles</string>
    <string name="txtfecha">Fecha:</string>
    <string name="txtDestino">Destino:</string>
    <string name="txtHoraSalida">Hora salida:</string>
    <string name="txtHoraLlegada">Hora llegada:</string>
    <string name="txtOrigen">Origen:</string>
    <string name="txtAerolinea">Aerolínea:</string>
</resources>