<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:background="#1E88E5">

    <TextView
        android:id="@+id/tvVueloHoraSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFechaVuelo"
        app:layout_constraintTop_toBottomOf="@+id/tvConVueloHoraSalidadVVuelo" />

    <TextView
        android:id="@+id/tvConVueloVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtVuelo"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvConAerolineaVuelo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConAerolineaVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtAerolinea"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConHoraVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtfecha"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvConFechaVuelo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConVueloHoraSalidadVVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtHoraSalida"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvConHoraVuelo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConFechaVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtDestino"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvConVueloVuelo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAerolineaVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConAerolineaVuelo" />

    <TextView
        android:id="@+id/tvVueloVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAerolineaVuelo"
        app:layout_constraintTop_toBottomOf="@+id/tvConVueloVuelo" />

    <TextView
        android:id="@+id/tvDestinoVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvVueloVuelo"
        app:layout_constraintTop_toBottomOf="@+id/tvConFechaVuelo" />

    <TextView
        android:id="@+id/tvFechaVuelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDestinoVuelo"
        app:layout_constraintTop_toBottomOf="@+id/tvConHoraVuelo" />
</androidx.constraintlayout.widget.ConstraintLayout>