<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservaVueloActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ReservaVueloActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.03" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/tvTitReservaVuelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtTitReserva"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toTopOf="@+id/guideline26" />

        <EditText
            android:id="@+id/etNombresReserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/txtNombres"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/tvTitReservaVuelo"
            android:importantForAutofill="no"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etApPatReserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/txtApPat"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/etNombresReserva"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/etApMatReserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/txtApMat"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/etApPatReserva"
            android:importantForAutofill="no" />

        <Spinner
            android:id="@+id/spTipoDocumentoReserva"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/etApMatReserva"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/etNumDocumentoReserva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/txtNumDoc"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/spTipoDocumentoReserva"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/btnReservarVuelo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtReservar"
            app:layout_constraintBottom_toTopOf="@+id/guideline27"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/cvFechaNacReserva" />

        <CalendarView
            android:id="@+id/cvFechaNacReserva"
            android:layout_width="307dp"
            android:layout_height="303dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline29"
            app:layout_constraintStart_toStartOf="@+id/guideline28"
            app:layout_constraintTop_toBottomOf="@+id/etNumDocumentoReserva" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>