<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp"
    android:background="#1E88E5">

    <TextView
        android:id="@+id/tvFechaSalidaVSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="115dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDestinoSalida"
        app:layout_constraintTop_toBottomOf="@+id/tvConFechaSalidaVSalida"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/tvConCodVueloSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtVuelo"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCodVueloSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConCodVueloSalida" />

    <TextView
        android:id="@+id/tvConFechaSalidaVSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtfecha"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvConDestinoSalida"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDestinoSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCodVueloSalida"
        app:layout_constraintTop_toBottomOf="@+id/tvConDestinoSalida" />

    <TextView
        android:id="@+id/tvConDestinoSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtDestino"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvConCodVueloSalida"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConHoraSalidaVSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:text="@string/txtHora"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tvConFechaSalidaVSalida"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHoraSalidaVSalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvFechaSalidaVSalida"
        app:layout_constraintTop_toBottomOf="@+id/tvConHoraSalidaVSalida" />

</androidx.constraintlayout.widget.ConstraintLayout>